AC_INIT(README)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(gecko-sharp, 0.7)
AM_MAINTAINER_MODE

API_VERSION=1.0.0.0
AC_SUBST(API_VERSION)

AC_MSG_CHECKING([whether we're compiling from CVS])
if test -f "$srcdir/.cvs_version" ; then
	from_cvs=yes
else
	from_cvs=no
fi
AC_MSG_RESULT($from_cvs)

AC_PATH_PROG(MONO, mono)
AC_PATH_PROG(MCS, mcs)
if test "x$MONO" = "x" ; then
  AC_MSG_ERROR([Can't find "mono" in your PATH])
fi
if test "x$MCS" = "x" ; then
  AC_MSG_ERROR([Can't find "mcs" in your PATH])
fi
AC_SUBST(PATH)
AC_SUBST(LD_LIBRARY_PATH)

dnl Find pkg-config
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
        AC_MSG_ERROR([You need to install pkg-config])
fi

dnl Find GTK
BUILD_GTK_CFLAGS=`$PKG_CONFIG --cflags gtk+-2.0`
BUILD_GTK_LIBS=`$PKG_CONFIG --libs gtk+-2.0`
AC_SUBST(BUILD_GTK_CFLAGS)
AC_SUBST(BUILD_GTK_LIBS)

GTK_REQUIRED_VERSION=2.0.0
MONO_REQUIRED_VERSION=0.95

PKG_CHECK_MODULES(BASE_DEPENDENCIES, gtk+-2.0 >= $GTK_REQUIRED_VERSION gmodule-2.0 >= $GTK_REQUIRED_VERSION  mono >= $MONO_REQUIRED_VERSION) 

AC_SUBST(BASE_DEPENDENCIES_CFLAGS)
AC_SUBST(BASE_DEPENDENCIES_LIBS)

dnl Find Gtk#
PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp-2.0 >= 1.9.0)
AC_SUBST(GTK_SHARP_CFLAGS)
AC_SUBST(GTK_SHARP_LIBS)

dnl Find Gtk#
PKG_CHECK_MODULES(GAPI, gapi-2.0 >= 1.9.0)

dnl Find Mozilla
dnl AC_ARG_WITH(mozilla-headers,
dnl        [  --with-mozilla-headers  Specify location of MOZILLA headers],
dnl        [MOZ_CFLAGS="-I$withval"],
dnl        [MOZ_CFLAGS="-I/usr/include/mozilla"])
                                                                                
dnl AC_ARG_WITH(mozilla-libs,
dnl        [  --with-mozilla-libs     Specify location of MOZILLA libs],
dnl        [MOZ_LIBS="-L$withval"],
dnl        [MOZ_LIBS="-L/usr/lib/mozilla"])

dnl AC_SUBST(MOZ_LIBS)
dnl AC_SUBST(MOZ_CFLAGS)

AC_PATH_PROG(GACUTIL, gacutil, no)
if test "x$GACUTIL" = "xno" ; then
        AC_MSG_ERROR([No gacutil tool found])
fi

AC_SUBST(GACUTIL)

AC_OUTPUT([
Makefile
gtkmozembed/Makefile
gtkmozembed/AssemblyInfo.cs
sample/Makefile
sources/Makefile
gecko-sharp.pc
])
